Quality of life and Edit event (WIP)

--- a/app/src/main/res/layout/fragment_edit_event.xml
+++ b/app/src/main/res/layout/fragment_edit_event.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/clAddReminderEvent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/clEditEvent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/jet"
-    tools:context=".fragments.NewReminderFragment">
+    tools:context=".fragments.editEventFragment">
 
     <View
         android:id="@+id/vTitle"
@@ -50,7 +50,7 @@
         android:elevation="4dp"
         android:padding="10dp"
         android:shadowColor="@color/black"
-        android:text="@string/add_page_title1"
+        android:text="@string/edit_event_tile"
         android:textColor="@color/white"
         android:textSize="34sp"
         android:textStyle="bold"
@@ -131,9 +131,9 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <View
-        android:id="@+id/vSelection"
+        android:id="@+id/vContainer1"
         android:layout_width="0dp"
-        android:layout_height="44dp"
+        android:layout_height="130dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
@@ -143,67 +143,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/clDescription" />
 
-    <Switch
-        android:id="@+id/swSelection"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:elevation="2dp"
-        android:switchMinWidth="70dp"
-        android:thumb="@drawable/custom_thumb"
-        android:track="@drawable/custom_track"
-        app:layout_constraintBottom_toBottomOf="@+id/vSelection"
-        app:layout_constraintEnd_toEndOf="@+id/vSelection"
-        app:layout_constraintStart_toStartOf="@+id/vSelection"
-        app:layout_constraintTop_toTopOf="@+id/vSelection"
-        tools:ignore="UseSwitchCompatOrMaterialXml,TouchTargetSizeCheck" />
-
-    <TextView
-        android:id="@+id/txtReminder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
-        android:elevation="2dp"
-        android:text="@string/add_reminder_reminder"
-        android:textAlignment="viewStart"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/vSelection"
-        app:layout_constraintStart_toStartOf="@+id/vSelection"
-        app:layout_constraintTop_toTopOf="@+id/vSelection" />
-
-    <TextView
-        android:id="@+id/txtEvent"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:elevation="2dp"
-        android:text="@string/add_reminder_event"
-        android:textAlignment="viewEnd"
-        android:textColor="@color/black"
-        android:textSize="24sp"
-        app:layout_constraintBottom_toBottomOf="@+id/vSelection"
-        app:layout_constraintEnd_toEndOf="@+id/vSelection"
-        app:layout_constraintTop_toTopOf="@+id/vSelection" />
-
-    <View
-        android:id="@+id/vContainer1"
-        android:layout_width="0dp"
-        android:layout_height="130dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
-        android:layout_marginEnd="8dp"
-        android:alpha="0.5"
-        android:background="@drawable/rounded_corners"
-        android:elevation="2dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/vSelection" />
-
     <View
         android:id="@+id/vLine1"
         android:layout_width="0dp"
         android:layout_height="3dp"
-        android:alpha="0.5"
         android:background="@color/silver"
         android:elevation="2dp"
         app:layout_constraintBottom_toBottomOf="@+id/vContainer1"
@@ -216,7 +159,6 @@
         android:id="@+id/vLine3"
         android:layout_width="0dp"
         android:layout_height="3dp"
-        android:alpha="0.5"
         android:background="@color/silver"
         android:elevation="2dp"
         app:layout_constraintBottom_toBottomOf="@+id/vContainer1"
@@ -230,7 +172,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:alpha="0.5"
         android:elevation="2dp"
         android:text="@string/add_reminder_start_date"
         android:textColor="@color/black"
@@ -245,7 +186,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:alpha="0.5"
         android:elevation="2dp"
         android:text="@string/add_reminder_end_date"
         android:textColor="@color/black"
@@ -259,7 +199,6 @@
         android:id="@+id/txtStartDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:alpha="0.5"
         android:elevation="2dp"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -273,7 +212,6 @@
         android:id="@+id/txtEndDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:alpha="0.5"
         android:elevation="2dp"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -289,7 +227,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:alpha="0.5"
         android:background="@color/empty"
         android:contentDescription="@string/add_reminder_select_start_date"
         android:elevation="2dp"
@@ -304,7 +241,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:alpha="0.5"
         android:background="@color/empty"
         android:contentDescription="@string/add_reminder_select_end_date"
         android:elevation="2dp"
@@ -322,7 +258,6 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
-        android:alpha="0.5"
         android:background="@drawable/rounded_corners"
         android:elevation="2dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -333,7 +268,6 @@
         android:id="@+id/vLine2"
         android:layout_width="0dp"
         android:layout_height="3dp"
-        android:alpha="0.5"
         android:background="@color/silver"
         android:elevation="2dp"
         app:layout_constraintBottom_toBottomOf="@+id/vContainer2"
@@ -346,7 +280,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:alpha="0.5"
         android:elevation="2dp"
         android:text="@string/add_reminder_repeat"
         android:textColor="@color/black"
@@ -361,7 +294,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:alpha="0.5"
         android:elevation="2dp"
         android:text="@string/add_reminder_notification"
         android:textColor="@color/black"
@@ -377,7 +309,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:alpha="0.5"
         android:elevation="2dp"
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -394,7 +325,6 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:alpha="0.5"
         android:elevation="2dp"
         android:textColor="@color/black"
         android:textSize="20sp"
@@ -409,7 +339,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:alpha="0.5"
         android:background="@color/empty"
         android:contentDescription="@string/add_reminder_select_repeat"
         android:elevation="2dp"
@@ -424,7 +353,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:alpha="0.5"
         android:background="@color/empty"
         android:contentDescription="@string/add_reminder_select_notification"
         android:elevation="2dp"
@@ -439,7 +367,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
-        android:alpha="0.5"
         android:elevation="2dp"
         android:thumb="@drawable/custom_thumb_color_switch"
         android:track="@drawable/custom_track"
@@ -453,7 +380,6 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginStart="16dp"
-        android:alpha="0.5"
         android:background="@drawable/baseline_access_time_30"
         android:elevation="2dp"
         app:layout_constraintBottom_toTopOf="@+id/vLine3"
