--- a/app/src/main/res/layout/fragment_edit_event.xml
+++ b/app/src/main/res/layout/fragment_edit_event.xml
@@ -81,6 +81,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
+        android:backgroundTint="@color/gray"
         android:elevation="2dp"
         android:ems="10"
         android:hint="@string/i_txt_notification_title"
@@ -114,6 +115,7 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
+            android:backgroundTint="@color/gray"
             android:ems="10"
             android:gravity="start|top"
             android:hint="@string/i_txt_notification_description"
