Event notifications (WIP)

--- a/app/src/main/res/layout/fragment_new_reminder_event.xml
+++ b/app/src/main/res/layout/fragment_new_reminder_event.xml
@@ -398,6 +398,8 @@
         android:layout_marginEnd="8dp"
         android:alpha="0.5"
         android:elevation="2dp"
+        android:singleLine="true"
+        android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/vContainer2"
