--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,10 +3,17 @@
     <style name="Base.Theme.TimeKeeper" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/white</item> -->
+        <item name="backgroundColor">@color/jet</item>
+        <item name="floatingActionButtonPrimaryStyle">@color/black</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:checkMarkTint">@color/white</item>
     </style>
 
     <style name="Theme.TimeKeeper" parent="Base.Theme.TimeKeeper" >
+        <item name="backgroundColor">@color/jet</item>
         <item name="floatingActionButtonPrimaryStyle">@color/black</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:checkMarkTint">@color/white</item>
     </style>
     
     <style name="CustomDatePickerDialog" parent="Theme.MaterialComponents.Light.Dialog">
@@ -85,6 +92,6 @@
         <item name="android:textColor">@color/accent</item>
         <item name="backgroundTint">@color/empty</item>
     </style>
-    
+
     <style name="CustomProgressBar" parent="android:Widget.Holo.ProgressBar" />
 </resources>
