--- a/app/src/main/res/layout/fragment_edit_event.xml
+++ b/app/src/main/res/layout/fragment_edit_event.xml
@@ -328,6 +328,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:elevation="2dp"
+        android:singleLine="true"
+        android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/vContainer2"
